# neith

./: .neith-note-template.md  Cargo.toml  DOCS.md  README.md  build  config-sample.toml  config.toml  install  neith  release  test  tmux_popup  uninstall
completions/bash/: neith
completions/zsh/: _neith
docs/: README.md  configuration.md  dependencies.md  diagnostics.md  indexing.md  installation.md  libraries.md  note-creation.md  quick-copy.md  search.md  tmux.md  usage.md
docs/developer/: README.md  architecture.md  configuration.md  dependencies.md  diagnostics.md  indexing.md  installation.md  libraries.md  note-creation.md  quick-copy.md  search.md  tmux.md  tui.md
shlib/: lib.sh
src/: action.rs  cli.rs  config.rs  diagnostics.rs  indexer.rs  lib.rs  library.rs  main.rs  man.rs  note.rs  query.rs  quick_copy.rs  search.rs  tui.rs
tests/unit/: action.rs  cli.rs  config.rs  diagnostics.rs  indexer.rs  library.rs  man.rs  note.rs  query.rs  quick_copy.rs  search.rs  tui.rs
