[package]
name = "neith"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
crossterm = "0.29"
dirs = "6.0"
nucleo-matcher = "0.3.1"
ratatui = "0.30.1"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.26.1"
tempfile = "3.23"
toml = "0.9"
walkdir = "2.5"
